--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
+        <header class="header page-padding">
             <div class="container">
                 <div class="header__inner">
                     <div class="header__menu">
@@ -23,21 +23,30 @@
                             <p>Оборудование для струйной цементации и бурения</p>
                         </div>
                         <div class="header__menu-mail">                        
-                            <img src="img/header/01.png" alt="">
+                            <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M27.4 14.6001C27.8243 14.6001 28.2313 14.7687 28.5314 15.0687C28.8314 15.3688 29 15.7758 29 16.2001V25.8001C29 26.2244 28.8314 26.6314 28.5314 26.9315C28.2313 27.2315 27.8243 27.4001 27.4 27.4001H14.6C14.1757 27.4001 13.7687 27.2315 13.4686 26.9315C13.1686 26.6314 13 26.2244 13 25.8001V16.2001C13 15.3201 13.72 14.6001 14.6 14.6001H27.4ZM23.904 21.8801L29 25.8001V24.2001L24.904 21.0801L29 17.8001V16.2001L21 22.6001L13 16.2001V17.8001L17.096 21.0801L13 24.2001V25.8001L18.096 21.8801L21 24.2001L23.904 21.8801Z" fill="white"/>
+                                <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="white"/>
+                            </svg>
                             <a class="header__email" href="emailto:tecniwell@mail.com" >tecniwell@mail.com</a>
                         </div>
                         <div class="header__menu-phone">
-                            <img src="img/header/02.png" alt="">
+
+
+                                <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle opacity="0.5" cx="21" cy="21" r="20.5" stroke="white"/>
+                                    <path d="M27.9996 25.7576V27.8978C28.0004 28.0965 27.9602 28.2931 27.8817 28.4752C27.8031 28.6572 27.6879 28.8206 27.5435 28.9549C27.399 29.0892 27.2285 29.1915 27.0428 29.2551C26.8571 29.3188 26.6603 29.3424 26.465 29.3245C24.299 29.086 22.2183 28.3359 20.3902 27.1344C18.6895 26.0392 17.2475 24.5778 16.1667 22.8541C14.9771 20.993 14.2368 18.8741 14.0057 16.669C13.9881 16.4718 14.0113 16.2729 14.0736 16.0852C14.136 15.8975 14.2363 15.725 14.3681 15.5787C14.4998 15.4324 14.6602 15.3155 14.839 15.2355C15.0178 15.1555 15.2111 15.114 15.4065 15.1138H17.5183C17.8599 15.1104 18.1911 15.233 18.4501 15.4588C18.7091 15.6845 18.8783 15.998 18.9261 16.3409C19.0152 17.0258 19.1805 17.6983 19.4188 18.3455C19.5135 18.6008 19.534 18.8783 19.4779 19.1451C19.4218 19.4119 19.2913 19.6568 19.1021 19.8507L18.2081 20.7567C19.2102 22.5427 20.6693 24.0215 22.4316 25.0371L23.3256 24.1311C23.5169 23.9393 23.7586 23.8071 24.0218 23.7502C24.2851 23.6933 24.5589 23.7141 24.8108 23.8101C25.4495 24.0516 26.113 24.2191 26.7888 24.3094C27.1308 24.3583 27.4431 24.5329 27.6663 24.7999C27.8895 25.0669 28.0081 25.4077 27.9996 25.7576Z" fill="white"/>
+                                    </svg>
                             <a href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
                         </div>
                     </div>
                     <nav class="header__sub-menu">
-                        <div class="header__sub-menu-logo">
-                            <img src="img/header/03.png" alt="">
-                        </div>
-                        <div class="header__sub-menu-item">
-                            <a href="" class="header__link">Главная</a>
-                            <img src="img/header/04.png" alt="" class="header__line">
+                        <div class="header__sub-menu-item-square">
+                            <div class="sub-menu-item-square__title">                            
+                                <img src="img/header/03.png" alt="">
+                                <a href="" class="header__link">Главная</a></div>
+                            <div class="sub-menu-item-square__underline">
+                                <img src="img/header/04.png" alt="" class="header__line">
+                            </div>
                         </div>
                         <div class="header__sub-menu-item">
                             <a href="" class="header__link">Каталог техники</a>
@@ -63,7 +72,7 @@
             <div class="main__img">
             </div>
             <div class="container">
-                <section class="main__aplication aplication">
+                <section class="page-padding main__aplication aplication">
                     <div class="aplication__title">ОФИЦИАЛЬНЫЙ 
                         ДИЛЕР TECNIWELL 
                         НА ТЕРРИТОРИИ 
@@ -72,7 +81,7 @@
                     <a class="aplication__button">Оставить заявку</a>
                 </section>
 
-                <section class="main__experience experience">
+                <section class="page-padding main__experience experience">
                     <div class="experience__inner">
                         <div class="experience__left">
                             <div class="experience__title">
@@ -95,7 +104,7 @@
                     </div>
                 </section>
 
-                <section class="main__dignities card-list">
+                <section class="page-padding main__dignities card-list">
                     <div class="card-list__item item">
                         <div class="item__up">
                             <div class="item__logo">
@@ -166,7 +175,7 @@
                     </div>
                 </section>
 
-                <section class="about">
+                <section class="page-padding about">
                     <div class="about__doc">
                         <img src="img/about/01.png" alt="">
                     </div>
@@ -174,12 +183,18 @@
                         <div class="about__title">О компании</div>
                         <div class="about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
                         <div class="about__text"> 
-                            <img src="img/about/02.png" alt="">
+                            <span>
+                                Осуществляем поставку оборудования, запасных частей и расходных материалов итальянского производителя TECNIWELL, в Россию, Африку, Европу и страны СНГ.
+
+Консультируем и подбираем оборудование, согласно поставленным задачам.
+
+Доставляем технику и расходные материалы до пункта назначения, не обременяя Клиента логистическими и таможенными формальностями.Сопровождаем оборудование в пост продажном обслуживании
+                            </span>
                         </div>
                     </div>
                 </section>
 
-                <section class="help">
+                <section class="page-padding help">
                     <div class="help__info">
                         <div class="help__title">Помощь заказчикам
                             в реализации строительных 
@@ -193,7 +208,7 @@
                     </div>
                 </section>
 
-                <section class="spare">
+                <section class="page-padding spare">
                     <div class="spare__img">
                         <img src="img/spare/01.png" alt="">
                     </div>
@@ -204,14 +219,12 @@
                         <div class="spare__text">Буровые технологии» представляет Вашему 
                             вниманию каталог запасных частей и расходных 
                             материалов, доступных к заказу</div>
-                        <div class="spare__buttom">
-                            <a href="">Перейти в каталог запчастей</a>
-                        </div>
-                        
+                            <a href="spare__buttom">Перейти в каталог запчастей</a>
+
                     </div>
                 </section>
 
-                <section class="about-big">
+                <section class="page-padding about-big">
                     <div class="about-big__title">
                         Больше о компании
                     </div>
@@ -295,7 +308,7 @@
                 </section>
             </div>
         </main>
-        <footer class="footer">
+        <footer class="footer page-padding">
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__menu">
