--- a/app/index.html
+++ b/app/index.html
@@ -69,42 +69,43 @@
             </div>
         </header>
         <main class="main">
-            <div class="main__img">
-            </div>
             <div class="container">
-                <section class="page-padding main__aplication aplication">
-                    <div class="aplication__title">ОФИЦИАЛЬНЫЙ 
-                        ДИЛЕР TECNIWELL 
-                        НА ТЕРРИТОРИИ 
-                        РОССИИ И СТРАН СНГ</div>
-                    <div class="aplication__text">Мировой лидер в разработке и производстве оборудования для струйной цементации, цементации и смесительных установок</div>
-                    <a class="aplication__button">Оставить заявку</a>
-                </section>
 
-                <section class="page-padding main__experience experience">
-                    <div class="experience__inner">
-                        <div class="experience__left">
-                            <div class="experience__title">
-                                <div class="experience__numbers">20 лет</div>
-                                <div class="experience__plus">
-                                    +
+                <div class="main__img">
+                    <section class="page-padding main-application main-application">
+                        <div class="main-application__title">ОФИЦИАЛЬНЫЙ
+                            ДИЛЕР TECNIWELL
+                            НА ТЕРРИТОРИИ
+                            РОССИИ И СТРАН СНГ</div>
+                        <div class="main-application__text">Мировой лидер в разработке и производстве оборудования для струйной цементации, цементации и смесительных установок</div>
+                        <a class="main-application__button">Оставить заявку</a>
+                    </section>
+
+                    <section class="page-padding main-experience">
+                        <div class="main-experience__inner">
+                            <div class="main-experience__left">
+                                <div class="main-experience__title">
+                                    <div class="main-experience__numbers">20 лет</div>
+                                    <div class="main-experience__plus">
+                                        +
+                                    </div>
+                                </div>
+                                <div class="main-experience__sub-title">
+                                    Компания на рынке
                                 </div>
                             </div>
-                            <div class="experience__sub-title">
-                                Компания на рынке
+                            <div class="main-experience__right">
+                                <div class="main-experience__text">Наша компания находится на рынке более 20 лет.  Мы единственный
+                                    официальный дилер в РФ и СНГ. Наша компания качественно
+                                    выполняет любые поставленные задачи  и предоставляет гибкие
+                                    условия для постоянных клиентов.
+                                </div>
                             </div>
                         </div>
-                        <div class="experience__right">
-                            <div class="experience__text">Наша компания находится на рынке более 20 лет.  Мы единственный 
-                                официальный дилер в РФ и СНГ. Наша компания качественно 
-                                выполняет любые поставленные задачи  и предоставляет гибкие
-                                условия для постоянных клиентов.
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                    </section>
+                </div>
 
-                <section class="page-padding main__dignities card-list">
+                <section class="page-padding card-list">
                     <div class="card-list__item item">
                         <div class="item__up">
                             <div class="item__logo">
@@ -175,14 +176,14 @@
                     </div>
                 </section>
 
-                <section class="page-padding about">
-                    <div class="about__doc">
+                <section class="page-padding main-about">
+                    <div class="main-about__doc">
                         <img src="img/about/01.png" alt="">
                     </div>
-                    <div class="about__info">
-                        <div class="about__title">О компании</div>
-                        <div class="about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
-                        <div class="about__text"> 
+                    <div class="main-about__info">
+                        <div class="main-about__title">О компании</div>
+                        <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
+                        <div class="main-about__text">
                             <span>
                                 Осуществляем поставку оборудования, запасных частей и расходных материалов итальянского производителя TECNIWELL, в Россию, Африку, Европу и страны СНГ.
 
@@ -194,52 +195,110 @@
                     </div>
                 </section>
 
-                <section class="page-padding help">
-                    <div class="help__info">
-                        <div class="help__title">Помощь заказчикам
+                <section class="page-padding main-help">
+                    <div class="main-help__info">
+                        <div class="main-help__title">Помощь заказчикам
                             в реализации строительных 
                             задач разного уровня сложности</div>
-                        <div class="help__text">В том числе, связанных с укреплением, цементацией 
+                        <div class="main-help__text">В том числе, связанных с укреплением, цементацией
                             грунта и бурением с использованием инновационного 
                             высококвалифицированного оборудования.</div>
                     </div>
-                    <div class="help__img">
+                    <div class="main-help__img">
                         <img src="img/help/01.png" alt="">
                     </div>
                 </section>
 
-                <section class="page-padding spare">
-                    <div class="spare__img">
-                        <img src="img/spare/01.png" alt="">
+                <section class="main-category">
+                    <div class="main-category__top">
+                        <h3>Категории товаров</h3>
+                        <a>Перейти в каталог категорий</a>
                     </div>
-                    <div class="spare__info">
-                        <div class="spare__title">Запасные части 
-                            и расходные 
-                            материалы</div>
-                        <div class="spare__text">Буровые технологии» представляет Вашему 
-                            вниманию каталог запасных частей и расходных 
-                            материалов, доступных к заказу</div>
-                            <a href="spare__buttom">Перейти в каталог запчастей</a>
+                    <div class="main-category__card-list">
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
+                        <div class="main-list__card">
+                            <img src="img/card/0.png" alt="">
+                            <p>Триплексные насосы</p>
+                        </div>
 
                     </div>
                 </section>
 
-                <section class="page-padding about-big">
-                    <div class="about-big__title">
+                <section class="page-padding main-spare">
+                    <div class="main-spare__img">
+                        <img src="img/spare/01.png" alt="">
+                    </div>
+                    <div class="main-spare__info">
+                        <div class="main-spare__title">Запасные части
+                            и расходные
+                            материалы</div>
+                        <div class="main-spare__text">Буровые технологии» представляет Вашему
+                            вниманию каталог запасных частей и расходных
+                            материалов, доступных к заказу</div>
+                        <a class="main-spare__button" href="">Перейти в каталог запчастей</a>
+
+                    </div>
+                </section>
+
+                <section class="page-padding main-about-big">
+                    <div class="main-about-big__title">
                         Больше о компании
                     </div>
-                    <div class="about-big__info">
-                        <ul class="about-big__list list">
-                                <li class="list__item">
-                                    <div class="list__line">
+                    <div class="main-about-big__info">
+                        <ul class="main-about-big__list main-list">
+                                <li class="main-list__item">
+                                    <div class="main-list__line">
                                         <svg width="647" height="2" viewBox="0 0 647 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M0 1H647" stroke="#B3B3B3"/>
                                         </svg>
                                     </div>
-                                    <div class="list__description">
-                                        <div class="list__text"> Поставка оборудования для струйной цементации 
+                                    <div class="main-list__description">
+                                        <div class="main-list__text"> Поставка оборудования для струйной цементации
                                             «JET-GROUTING», цементациии и бурения</div>
-                                        <div class="list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <div class="main-list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z" fill="#D82329"/>
                                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                                             </svg>
@@ -247,15 +306,15 @@
                                     </div>
 
                                 </li>
-                                <li class="list__item">
-                                    <div class="list__line">
+                                <li class="main-list__item">
+                                    <div class="main-list__line">
                                         <svg width="647" height="2" viewBox="0 0 647 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M0 1H647" stroke="#B3B3B3"/>
                                         </svg>
                                     </div>
-                                    <div class="list__description">
-                                        <div class="list__text"> История компании Tecniwell</div>
-                                        <div class="list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <div class="main-list__description">
+                                        <div class="main-list__text"> История компании Tecniwell</div>
+                                        <div class="main-list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z" fill="#D82329"/>
                                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                                             </svg>
@@ -263,15 +322,15 @@
                                     </div>
 
                                 </li>
-                                <li class="list__item">
-                                    <div class="list__line">
+                                <li class="main-list__item">
+                                    <div class="main-list__line">
                                         <svg width="647" height="2" viewBox="0 0 647 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M0 1H647" stroke="#B3B3B3"/>
                                         </svg>
                                     </div>
-                                    <div class="list__description">
-                                        <div class="list__text"> Компетенция компании Tecniwell</div>
-                                        <div class="list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <div class="main-list__description">
+                                        <div class="main-list__text"> Компетенция компании Tecniwell</div>
+                                        <div class="main-list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z" fill="#D82329"/>
                                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                                             </svg>
@@ -279,15 +338,15 @@
                                     </div>
 
                                 </li>
-                                <li class="list__item">
-                                    <div class="list__line">
+                                <li class="main-list__item">
+                                    <div class="main-list__line">
                                         <svg width="647" height="2" viewBox="0 0 647 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M0 1H647" stroke="#B3B3B3"/>
                                         </svg>
                                     </div>
-                                    <div class="list__description">
-                                        <div class="list__text"> Компетенция компании Tecniwell</div>
-                                        <div class="list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <div class="main-list__description">
+                                        <div class="main-list__text"> Компетенция компании Tecniwell</div>
+                                        <div class="main-list__arrow"> <svg width="34" height="17" viewBox="0 0 34 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z" fill="#D82329"/>
                                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                                             </svg>
@@ -300,7 +359,7 @@
                                 </svg>
                         </ul>
 
-                        <div class="about-big__img">
+                        <div class="main-about-big__img">
                             <img src="img/big_about/01.png" alt="">
                         </div>
                     </div>
