--- a/app/index.html
+++ b/app/index.html
@@ -214,56 +214,42 @@
                         <h3>Категории товаров</h3>
                         <a>Перейти в каталог категорий</a>
                     </div>
-                    <div class="main-category__card-list">
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
+                    <div class="main-category__card-helper">
+                        <div class="main-category__card-opacity"></div>
+                        <div class="main-category__card-list">
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
+                            <div class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </div>
                         </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-                        <div class="main-list__card">
-                            <img src="img/card/0.png" alt="">
-                            <p>Триплексные насосы</p>
-                        </div>
-
                     </div>
                 </section>
 
