--- a/app/index.html
+++ b/app/index.html
@@ -68,11 +68,14 @@
                 </div>
             </div>
         </header>
+
+
         <main class="main">
             <div class="container">
                 <div class="main__img">
+
                     <div class="container_min">
-                    <section class="page-padding main-application">
+                    <section class="main-application">
                         <div class="main-application__title">ОФИЦИАЛЬНЫЙ
                             ДИЛЕР TECNIWELL
                             НА ТЕРРИТОРИИ
@@ -81,8 +84,7 @@
                         <a class="main-application__button">Оставить заявку</a>
                     </section>
                 </div>
-                    
-                    <section class="page-padding main-experience">
+                    <section class="main-experience">
                         <div class="container_max">
                         <div class="main-experience__inner">
                             <div class="main-experience__left">
@@ -426,3 +428,4 @@
     </div>
 </body>
 </html>
+
