--- a/app/index.html
+++ b/app/index.html
@@ -399,24 +399,24 @@
                                 <img src="img/footer/03.png" alt="">
                                 <a href="" class="footer__link">Главная</a></div>
                             <div class="sub-menu-item-square__underline">
-                                <img src="img/footer/04.png" alt="" class="footer__line">
+                                <img src="img/footer/04.svg" alt="" class="footer__line">
                             </div>
                         </div>
                         <div class="footer__sub-menu-item">
                             <a href="" class="footer__link">Каталог техники</a>
-                            <img src="img/footer/04.png" alt="" class="footer__line">
+                            <img src="img/footer/04.svg" alt="" class="footer__line">
                         </div>
                         <div class="footer__sub-menu-item">
                             <a href="" class="footer__link">Каталог запчастей</a>
-                            <img src="img/footer/04.png" alt="" class="footer__line">
+                            <img src="img/footer/04.svg" alt="" class="footer__line">
                         </div>
                         <div class="footer__sub-menu-item">
                             <a href="" class="footer__link">О компании</a>
-                            <img src="img/footer/04.png" alt="" class="footer__line">
+                            <img src="img/footer/04.svg" alt="" class="footer__line">
                         </div>
                         <div class="footer__sub-menu-item">
                             <a href="" class="footer__link">Статьи</a>
-                            <img src="img/footer/04.png" alt="" class="footer__line">
+                            <img src="img/footer/04.svg" alt="" class="footer__line">
                         </div>
                     </nav>
                 </div>
