fixed main page

--- a/app/index.html
+++ b/app/index.html
@@ -44,9 +44,7 @@
                             <div class="sub-menu-item-square__title">                            
                                 <img src="img/header/03.png" alt="">
                                 <a href="" class="header__link">Главная</a></div>
-                            <div class="sub-menu-item-square__underline">
                                 <img src="img/header/04.png" alt="" class="header__line">
-                            </div>
                         </div>
                         <div class="header__sub-menu-item">
                             <a href="" class="header__link">Каталог техники</a>
@@ -209,13 +207,12 @@
                                 грунта и бурением с использованием инновационного 
                                 высококвалифицированного оборудования.</div>
                         </div>
-                        <div class="main-help__img">
+                        <a href="" class="main-help__img">
                             <img src="img/help/01.png" alt="">
-                        </div>
+                        </a>
                     </div>
 
                 </section>
-                <div class="container_max">
                 <section class="main-category">
                     <div class="main-category__top">
                         <h3>Категории товаров</h3>
@@ -224,38 +221,43 @@
                     <div class="main-category__card-helper">
                         <div class="main-category__card-opacity"></div>
                         <div class="main-category__card-list">
-                            <div class="main-category__card">
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
-                            <div class="main-category__card">
+                            </a>
+                            <a href="" class="main-category__card">
                                 <img src="img/card/0.png" alt="">
                                 <p class="">Триплексные насосы</p>
-                            </div>
+                            </a>
+                            <a href="" class="main-category__card">
+                                <img src="img/card/0.png" alt="">
+                                <p class="">Триплексные насосы</p>
+                            </a>
+
                         </div>
                     </div>
                 </section>
