--- a/app/index.html
+++ b/app/index.html
@@ -312,7 +312,7 @@
                 <div class="main-about-big__info">
                     <ul class="main-about-big__list main-list">
                         <li class="main-list__item">
-                            <div class="main-list__line">
+                            <div class="main-list__line_first">
                                 <svg width="647" height="2" viewBox="0 0 647 2" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0 1H647" stroke="#B3B3B3"/>
@@ -393,10 +393,12 @@
                             </div>
 
                         </li>
-                        <svg class="" width="647" height="2" viewBox="0 0 647 2" fill="none"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0 1H647" stroke="#B3B3B3"/>
-                        </svg>
+                        <div class="main-list__line_bottom">
+                            <svg class="" width="647" height="2" viewBox="0 0 647 2" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 1H647" stroke="#B3B3B3"/>
+                            </svg>
+                        </div>
                     </ul>
 
                     <div class="main-about-big__img">
