verstka product-about and adaptiv verstka-catalog-about

--- a/app/product-catalog.html
+++ b/app/product-catalog.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <main class="main">
             <div class="_container">
-                <div class="product-catalog__page">
+                <div class="product-catalog">
                     <div class="product-catalog__top">
                         <div class="product-catalog-about__text">Каталог техники</div>
                     </div>
