--- a/app/product-catalog.html
+++ b/app/product-catalog.html
@@ -17,63 +17,51 @@
                     <div class="product-catalog__top">
                         <div class="product-catalog-about__text">Каталог техники</div>
                     </div>
-                    <div class="product-catalog">
-                        <div class="card-list-catalog">                  
-                                <div class="card-list-catalog__card">
-                                    <div class="card__img">
+                    <div class="product-catalog__body">
+                        <div class="product-catalog__card-list-catalog card-list-catalog"> 
+
+                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
                                         <img src="img/product-catalog/1.png" alt="">
                                     </div>
-                                    <div class="card__title">Триплексные насосы</div>
-                                </div>
-                                <div class="card-list-catalog__card">
-                                    <div class="card__img">
+                                    <div class="catalog-card__title">Триплексные насосы</div>
+                                </div>                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
                                         <img src="img/product-catalog/2.png" alt="">
                                     </div>
-                                    <div class="card__title">Смесительные агрегаты</div>
-                                </div>
-                                <div class="card-list-catalog__card">
-                                    <div class="card__img">
+                                    <div class="catalog-card__title">Триплексные насосы</div>
+                                </div>                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
                                         <img src="img/product-catalog/3.png" alt="">
                                     </div>
-                                    <div class="card__title">Компактные системы 
-                                        для струйной цементации 
-                                        Jet Grouting</div>
-                                </div>
-                                <div class="card-list-catalog__card">
-                                    <div class="card__img">
+                                    <div class="catalog-card__title">Триплексные насосы</div>
+                                </div>                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
                                         <img src="img/product-catalog/4.png" alt="">
                                     </div>
-                                    <div class="card__title">Инъекционные агрегаты</div>
+                                    <div class="catalog-card__title">Триплексные насосы</div>
+                                </div>                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
+                                        <img src="img/product-catalog/5.png" alt="">
+                                    </div>
+                                    <div class="catalog-card__title">Триплексные насосы</div>
+                                </div>                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
+                                        <img src="img/product-catalog/6.png" alt="">
+                                    </div>
+                                    <div class="catalog-card__title">Триплексные насосы</div>
+                                </div>                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
+                                        <img src="img/product-catalog/7.png" alt="">
+                                    </div>
+                                    <div class="catalog-card__title">Триплексные насосы</div>
                                 </div>
-                        </div>
-                        <div class="card-list-catalog">                  
-                            <div class="card-list-catalog__card">
-                                <div class="card__img">
-                                    <img src="img/product-catalog/5.png" alt="">
+                                <div class="card-list-catalog__card catalog-card">
+                                    <div class="catalog-card__img">
+                                        <img src="img/product-catalog/8.png" alt="">
+                                    </div>
+                                    <div class="catalog-card__title">Триплексные насосы</div>
                                 </div>
-                                <div class="card__title">Инъекционные насосы</div>
-                            </div>
-                            <div class="card-list-catalog__card">
-                                <div class="card__img">
-                                    <img src="img/product-catalog/6.png" alt="">
-                                </div>
-                                <div class="card__title">Контейнерные инъекционные агрегаты</div>
-                            </div>
-                            <div class="card-list-catalog__card">
-                                <div class="card__img">
-                                    <img src="img/product-catalog/7.png" alt="">
-                                </div>
-                                <div class="card__title">Силосы для сыпучих материалов</div>
-                            </div>
-                            <div class="card-list-catalog__card">
-                                <div class="card__img">
-                                    <img src="img/product-catalog/8.png" alt="">
-                                </div>
-                                <div class="card__title">Буровая колонна</div>
-                            </div>
-                    </div>
-
-                        
                 </div>
             </div>
         </main>
